# stackmachine

./: .travis.yml  Cargo.toml  README.md
.github/workflows/: rust.yml
examples/: adder.sm  cond.sm  fn_call.sm  fork.sm  fork_branch.sm  include.sm  mul.sm  print_string.sm  recurse.sm  string.sm
src/: lib.rs  main.rs  stackmachine.rs  testdriver.rs
src/stackmachine/: builder.rs  function.rs  mod.rs  reader.rs
src/stackmachine/function/: mod.rs
src/stackmachine/function/ops/: mod.rs
