[package]
name = "stackmachine"
version = "0.1.0"
authors = ["Asher Mancinelli <ashermancinelli@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "testdriver"
path = "src/testdriver.rs"

[[bin]]
name = "stackmachine"
path = "src/main.rs"
